fix page widgets placement if scrollbars are detected.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@21945 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content.scss
+++ b/src/main/resources/scss/_content.scss
@@ -391,6 +391,10 @@ div.no-content-splash {
 	padding-bottom: 12px;
 	padding-left: 10px;
 
+	.detected-scrollbars & {
+		right: 17px;
+	}
+
 	.meta {
 		position: relative;
 		overflow: hidden;
